# fractal-gen

./: .gitignore  Cargo.toml  LOG.md  README.md
src/: demo.rs  fractal.rs  fractals.rs  image.rs  lib.rs  main.rs
src/fractal/: barnsley_fern.rs  circle.rs  julia.rs  koch_curve.rs  line.rs  mandelbrot.rs  tree.rs
src/fractals/: circle.rs  koch_curve.rs  line.rs  sierpinski_triangle.rs  tree.rs
src/image/: header.rs  pixel.rs  rotate.rs  utils.rs
