[package]
name = "fractal-gen"
version = "0.1.4"
authors = ["berat <beratkaya1998@gmail.com>"]
edition = "2018"
description = "Fractals is a Rust project to generate fractals."
readme = "README.md"
repository = "https://github.com/rust-lang/cargo/"
license = "MIT"
keywords = ["fractal", "generator", "image", "pattern", "shape"]
categories = ["multimedia::images", "algorithms"]

[dependencies]